# AnimaDao

./: .animadao.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag.yml
animadao/: cli.py
tests/: conftest.py  test_config.py  test_dependency_checker.py  test_multiple_srcs.py  test_poetry_loader.py  test_precommit_gate.py  test_precommit_gate_srcs.py  test_report_generator.py  test_requirements_loader.py  test_src_parametrize.py  test_unused_multiple_srcs.py  test_version_checker.py
