[project]
name = "anima-dao"
version = "0.1.0"
description = "Confucian-spirited dependency health checker for Python projects using pyproject + uv"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dmitry Kosarevsky", email = "if@kosarevsky.ru" }]
license = "MIT"

dependencies = [
  "click>=8.2.1",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "build>=1.2.1",
  "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["animadao"]

[project.scripts]
animadao = "animadao.cli:cli"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
